# grasp

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Overview.md  PERF_LOG.md  README.md  generate_course.py  generate_lesson.py  main.py  merge_audio_video.py  pyproject.toml  test_tts.py
.github/: dependabot.yml
.github/workflows/: lint-typecheck.yml
create-lesson/: lesson_planner.py  prompt.md
create_lesson/: README.md  input_processor.py  lesson_planner.py  manim_prompt.md  script_generator.py
manual_inspection/: document_selector.py  review_step.py  tts_step.py
manual_inspection/frame_review/: review_frames.py  test_different_algorithms.py
manual_inspection/tts/: benchmark_batch_size.py  tts_step.py
preprocessing/: analyze_exams.py  batch_process.py  extract_from_pdf.py  process_images.py  process_pdf.py  process_video.py
preprocessing/exams/: exam_prompt.md
prompts/: course_planner_prompt.md  exam_classifier_prompt.md  image_transcriber_prompt.md  lesson_prompt.md  manim_prompt.md  pdf_transcriber_prompt.md  section_script_prompt.md  video_fix_prompt.md  video_review_prompt.md
scripts/: check_file_length.py
src/: audiomanager.py  cache.py  cli.py  command_runner.py  compositor.py  document_selector.py  input_processor.py  llm_metrics.py  manim_prompt.md  models.py  paths.py  rendering.py  run_all_lessons.py  script_generator.py  search_replace.py  settings.py  workflow.py
src/core/: __init__.py  cache.py  command_runner.py  llm_metrics.py  paths.py  utils.py
src/planning/: __init__.py  course_planner.py  models.py
src/preprocessing/: __init__.py  analyze_exams.py  batch_process.py  document_selector.py  extract_from_pdf.py  input_processor.py  process_images.py  process_pdf.py  process_video.py
src/rendering/: __init__.py  audio.py  render.py
src/review/: models.py
src/review/algorithms/: __init__.py  brightness_peaks.py  constants.py  encoding.py  extractors.py  settled_ssim.py  similarity.py
src/scripting/: __init__.py  generator.py  search_replace.py
src/tts/: __init__.py  base.py  kokoro.py  piper.py  qwen.py
tests/: test_audiomanager.py  test_cache.py  test_command_runner.py  test_compositor.py  test_course_planner.py  test_input_processor.py  test_rendering.py  test_script_generator.py
tts/: audiomanager.py
