[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-courses"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.13"
dependencies = [
    "langchain-core>=1.1.0",
    "langchain-openai>=1.1.10",
    "manim>=0.20.1",
    "matplotlib>=3.10.0",
    "moviepy>=2.2.1",
    "numpy>=2.4.2",
    "kokoro>=0.9.2",
    "pillow==11.0.0",
    "pydantic>=2.11.7",
    "piper-tts>=1.4.1",
    "qwen-tts>=0.1.0",
    "torch>=2.3.0",
    "pypdfium2>=4.30.0",
    "python-dotenv>=1.2.2",
    "markitdown[pdf]>=0.1.5",
    "pyyaml>=6.0.2",
    "openai-whisper>=20250625",
    "diff-match-patch>=20241021",
    "pymupdf>=1.27.2",
    "gitpython>=3.1.46",
]

[project.scripts]
lesson = "src.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "deptry>=0.25.1",
    "pre-commit>=4.5.1",
    "pytest>=8.0.0",
    "pyright>=1.1.0",
    "ruff>=0.15.4",
    "types-pyyaml>=6.0.12.20250915",
]

[tool.pyright]
pythonVersion = "3.13"
typeCheckingMode = "basic"
reportMissingModuleSource = false
venvPath = "."
venv = ".venv"
# Exclude generated/cache artefacts
exclude = [
    ".cache",
    "output",
    ".venv",
    "**/__pycache__",
    "**/.*",
    "tests",
]

[tool.pytest.ini_options]
addopts = "-v"
testpaths = ["tests"]
markers = [
    "integration: end-to-end tests that download and run the TTS model locally",
]

[tool.ruff.lint.per-file-ignores]
# Manim scenes use `from manim import *` by convention
".cache/scripts/lesson.py" = ["F403", "F405"]
"output/*/lesson.py" = ["F403", "F405"]


[tool.ruff]
# Set the maximum line length to 130
line-length = 130
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors (PEP 8 basics)
    "W",      # pycodestyle warnings
    "F",      # pyflakes (logical errors, unused imports)
    "I",      # isort (automatically sorts imports)
    "B",      # flake8-bugbear (flags common bugs and design problems)
    "UP",     # pyupgrade (automatically updates syntax to modern Python)
    "SIM",    # flake8-simplify (suggests code simplifications)
    "RUF",    # Ruff-specific rules
    "ANN",    # type annotations required
    "BLE",    # blind exception catches
    "TRY",    # exception handling best practices
    "N",      # PEP 8 naming conventions
    "PLR2004",# magic value literals
    "C90",    # McCabe cyclomatic complexity
    "PLR0912",# too many branches
    "TID",    # tidy imports (ban relative imports)
    "ISC",    # implicit string concatenation
]
ignore = [
    "ANN002",  # *args annotation — rarely adds value
    "ANN003",  # **kwargs annotation — rarely adds value
    "ANN401",  # use of Any — acceptable for complex types
    "TRY003",  # allow bare except clauses
    "ISC001",  # allow implicit string concatenation (e.g. multi-line docstrings)
]

[tool.ruff.lint.mccabe]
max-complexity = 12

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
